# mliot-embeddedc-2026-hw

week01/: buoi01_thaivietanhkhoa.c
week02/: answer.txt  buoi02.thaivietanhkhoa.c
week03/: answers.txt  build_and_flash.bat
week04/: CMakeLists.txt  STM32F103C8Tx_FLASH.ld  answers.txt  arm-none-eabi-gcc.cmake  flash_and_build.bat
week04/Src/: main.c
